# ComfyUI-WJNodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
Example/: 2025-0208-Select approximate colors based on color space distance.json
config/color_name/: color_data_edit.py  color_name_default_v3.json  default1_OriginalData.py
config/hardware_data/: Nvidia.json  NvidiaServer.json
config/prompt/test/: model_test.json
config/seg_color/: ADE20K.json  ADE20K_v1.1.json  DensePose_v1.11_Parula(CivitAI).json  DensePose_v1.11_Viridis(MagicAnimate).json  DensePose_v1.1_Parula(CivitAI).json  DensePose_v1.1_Viridis(MagicAnimate).json  color_data.py
moduel/: BEN2.py  color_utils.py  custom_class.py  folder_paths.py  image_utils.py  list_edit.py  str_edit.py  video_utils.py
nodes/: AudioEdit.py  blend_image.py  classify.py  color.py  compatible.py  crop.py  detection.py  file.py  gpu_contrast.py  hardware.py  image.py  mask.py  other_Similarity.py  other_ben2.py  other_easyocr.py  other_nodes.py  other_nodes_easyocr.py  prompt.py  rgba_batch.py  video_edit.py  yolo_nodes.txt
nodes/nodes_test/: tensort_nodes.py
nodes/nodes_test/models_BiRefNet/: birefnet.py  common.py
nodes/nodes_test/models_BiRefNet/models/: birefnet.py  dataset.py
nodes/nodes_test/models_BiRefNet/models/backbones/: build_backbone.py  pvt_v2.py  swin_v1.py
nodes/nodes_test/tensort/: export_onnx_BiRefNet.py  tensort.py  utilities.py  utilities_Rifet.py
nodes/video_utils/: utils.py
nodes/yolo_utils/: subcore.py
seg_color/: ADE20K.xlsx
web/js/: model.core.js
(+4 files in other folders)
