[project]
name = "comfyui-wjnodes"
description = "Ready to use upon download. No need to install dependencies for the time being.\nIf there are new functions or suggestions, please provide feedback.\nAttention! The delfile node is not recommended for use on servers. I am not responsible for any losses incurred."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["#The following may already be present:", "#numpy", "#torch"]

[project.urls]
Repository = "https://github.com/807502278/ComfyUI-WJNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-WJNodes"
Icon = ""
