[project]
name = "comfyui-wjnodes"
description = "These are some nodes that I often use,If there are new functions or suggestions, please provide feedback."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["#The following may already be present:", "#numpy", "#torch"]

[project.urls]
Repository = "https://github.com/807502278/ComfyUI-WJNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "807502278"
DisplayName = "ComfyUI-WJNodes"
Icon = ""
